cleanup: removed line breaks and dealt with warnings